# srecha-invoice

./: BUILD-WINDOWS.md  README.md  package-lock.json  package.json  СБОРКА-DMG.sh
.github/workflows/: build-windows.yml
app/: index.html  sync-service.js  tauri-adapter.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  forecast_service.rs  lib.rs  main.rs
src-tauri/src/forecast/: README.md
