[package]
name = "srecha-invoice"
version = "1.0.0"
description = "Srecha Invoice Desktop Application"
authors = ["Srecha Team"]
license = "MIT"
repository = ""
edition = "2021"

[package.metadata.bundle]
identifier = "com.srecha.invoice"
icon = ["icons/icon.ico"]

[lib]
name = "srecha_invoice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "srecha-invoice"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
dirs = "5.0"

